#372 useractivities (#388)
* #372 - Refactored Api Response builder